force-app/main/default/objects/User/fields/cm_Preferred_Portal_Name__c.field-meta.xml
<CustomField>
    <fullName>cm_Preferred_Portal_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK( Contact.cm_Preferred_Contact_Name__c )), Contact.cm_Preferred_Contact_Name__c,  FirstName)</formula>
    <inlineHelpText>For Portal Users: when Preferred Contact Name is specified on the contact, Customer Portal Email Templates will utilize the value in that field. Otherwise, First Name will be used.</inlineHelpText>
    <label>Preferred Portal Name</label>
    <type>Text</type>
</CustomField>