force-app/main/default/objects/User/fields/LLC_BI__nCino_User__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__nCino_User__c</fullName>
    <description>This field is automatically populated as enabled. This field indicates whether the user has a license for the nCino Platform or not.</description>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nCino User</label>
    <type>Checkbox</type>
</CustomField>