force-app/main/default/objects/User/fields/nBRIDGER__Bridger_Username__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Bridger_Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Username for Bridger login</description>
    <label>Bridger Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>