force-app/main/default/objects/User/fields/nCino_University_Completion__c.field-meta.xml
<CustomField>
    <fullName>nCino_University_Completion__c</fullName>
    <label>nCino University Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>