force-app/main/default/objects/User/fields/No_Triggers__c.field-meta.xml
<CustomField>
    <fullName>No_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be checked when choosing to turn off ALL Triggers for an individual user. This will typically apply to nCino &amp; Salesforce Administrators.</description>
    <inlineHelpText>This field should be checked when choosing to turn off ALL Triggers for an individual user. This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
    <label>No Triggers</label>
    <type>Checkbox</type>
</CustomField>