force-app/main/default/objects/User/fields/No_Validation__c.field-meta.xml
<CustomField>
    <fullName>No_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be checked when choosing to turn off ALL validation rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</description>
    <inlineHelpText>This field should be checked when choosing to turn off ALL validation rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
    <label>No Validation</label>
    <type>Checkbox</type>
</CustomField>