force-app/main/default/objects/User/fields/nPortal__Has_Reached_Ownership_Limit__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Has_Reached_Ownership_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field indicates if the user has reached the configured maximum number of owned Accounts for role optimization</description>
    <label>Has Reached Ownership Limit</label>
    <type>Checkbox</type>
</CustomField>