force-app/main/default/objects/User/fields/nPortal__Sharing_History__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Sharing_History__c</fullName>
    <description>This long text field is automatically populated upon the deactivation of a Customer Portal User. It is used to capture all of the records to which the Portal User had sharing access.</description>
    <inlineHelpText>This long text field is automatically populated upon the deactivation of a Customer Portal User. It is used to capture all of the records to which the Portal User had sharing access.</inlineHelpText>
    <label>Customer Portal Sharing History</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>