force-app/main/default/objects/User/fields/nPortal__User_Created_Customer_Engagement_PW__c.field-meta.xml
<CustomField>
    <fullName>nPortal__User_Created_Customer_Engagement_PW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this checkbox field if the user has created their own password for the Customer Engagement Solution (such as through self-registration, an online application workflow, or Single Sign-On).</description>
    <label>User-Created Customer Engagement PW</label>
    <type>Checkbox</type>
</CustomField>