force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>The Region in which a user is associated with.  Drives automation of Relationship Region</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abilene</fullName>
            </value>
            <value>
                <fullName>Sweetwater</fullName>
            </value>
            <value>
                <fullName>Hereford</fullName>
            </value>
            <value>
                <fullName>Cleburne</fullName>
            </value>
            <value>
                <fullName>Weatherford</fullName>
            </value>
            <value>
                <fullName>Southlake</fullName>
            </value>
            <value>
                <fullName>Fort Worth</fullName>
            </value>
            <value>
                <fullName>Stephenville</fullName>
            </value>
            <value>
                <fullName>San Angelo</fullName>
            </value>
            <value>
                <fullName>Kingwood</fullName>
            </value>
            <value>
                <fullName>Bryan/College Station</fullName>
            </value>
            <value>
                <fullName>Conroe</fullName>
            </value>
            <value>
                <fullName>Eastland</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>