force-app/main/default/objects/User/listViews/Customer_Portal_Account_Owner_User.listView-meta.xml
<ListView>
    <fullName>Customer_Portal_Account_Owner_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Customer Portal Account Owner User</value>
    </filters>
    <label>Customer Portal Account Owner User</label>
    <language>en_US</language>
</ListView>