force-app/main/default/objects/User/listViews/LLC_BI__ActiveUsers.listView-meta.xml
<ListView>
    <fullName>LLC_BI__ActiveUsers</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users</label>
</ListView>